--- a/styles/queries.css
+++ b/styles/queries.css
@@ -1544,8 +1544,8 @@
     line-height: 4.5454545455vw;
   }
   .favorites__box {
-    margin-left: 50px;
-    padding: 8.5227272727vw 1.4204545455vw 8.5227272727vw 14.2045454545vw;
+    margin-left: 7.1022727273vw;
+    padding: 4.2613636364vw 1.4204545455vw 4.2613636364vw 14.2045454545vw;
     width: 85.2272727273vw;
     height: 58.6647727273vw;
   }
