--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -1342,8 +1342,8 @@
       text-transform: uppercase;
 
       .header__main-list {
-        margin-top: 250 / $width * 100vw;
-        margin-left: 150 / $width * 100vw;
+        margin-top: 50 / $width * 100vw;
+        margin-left: 50 / $width * 100vw;
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -1365,8 +1365,8 @@
             height: 35 / $width * 100vw;
 
             a {
-              line-height: 30 / $width * 100vw;
-              font-size: 24 / $width * 100vw;
+              line-height: 20 / $width * 100vw;
+              font-size: 14 / $width * 100vw;
               &::after {
                 display: none;
               }
@@ -1423,7 +1423,7 @@
           position: relative;
           text-align: center;
           align-self: center;
-          margin-bottom: 15 / $width * 100vw;
+          margin-bottom: 5 / $width * 100vw;
           //margin-right: 5 / $width * 100vw;
 
           a img {
@@ -1433,7 +1433,7 @@
             filter: brightness(0) invert(10);
           }
           a {
-            font-size: 36 / $width * 100vw;
+            font-size: 26 / $width * 100vw;
             line-height: 50 / $width * 100vw;
             color: #fff;
             display: block;
@@ -1451,7 +1451,7 @@
 }
 
 /**************************/
-/* BELOW 704px (Smaller tablets) */
+/* BELOW 704/ $width * 100vw (Smaller tablets) */
 /**************************/
 
 @media (max-width: 704px) {
@@ -2096,4 +2096,647 @@
 /* BELOW 544/ $width * 100vw (Phones) */
 /**************************/
 
-//@media (max-width: 544/ $width * 100vw) {
+@media (max-width: 544px) {
+  $width: 544;
+  .container-min {
+    min-width: 414 / $width * 100vw;
+    margin: 0 auto;
+  }
+  .container-medium {
+    max-width: 460 / $width * 100vw;
+    margin: 0 auto;
+    padding-left: 10 / $width * 100vw;
+    padding-right: 10 / $width * 100vw;
+  }
+  .container-large {
+    max-width: 490 / $width * 100vw;
+    margin: 0 auto;
+  }
+  button a {
+    height: 20 / $width * 100vw;
+    width: 146 / $width * 100vw;
+  }
+  .btn {
+    font-size: 14 / $width * 100vw;
+    padding: 10 / $width * 100vw 30 / $width * 100vw;
+    border-radius: 150 / $width * 100vw;
+  }
+  ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+  /**********SECTION HEADER****************/
+  ///WRAPER TOP///
+
+  .header {
+    &__wrapper-top {
+      padding: 20 / $width * 100vw 0 0;
+      &__row {
+        background-color: #0f13d4;
+        padding-bottom: 20 / $width * 100vw;
+        max-width: 490 / $width * 100vw;
+        margin: 0 auto;
+        &__adress,
+        &__work-time {
+          font-size: 12 / $width * 100vw;
+          line-height: 18 / $width * 100vw;
+        }
+
+        &__adress {
+          height: 44 / $width * 100vw;
+          width: 195 / $width * 100vw;
+        }
+        &__work-time {
+          margin-top: 26 / $width * 100vw;
+          height: 44 / $width * 100vw;
+          width: 179 / $width * 100vw;
+          &__telephone,
+          &__telephone a {
+            margin-top: 6 / $width * 100vw;
+            font-size: 16 / $width * 100vw;
+            line-height: 22 / $width * 100vw;
+          }
+        }
+        &__logo {
+          img {
+            height: 59 / $width * 100vw;
+            width: 140 / $width * 100vw;
+          }
+          p {
+            margin-top: 17 / $width * 100vw;
+            height: 14 / $width * 100vw;
+            width: 296 / $width * 100vw;
+            font-size: 12 / $width * 100vw;
+            line-height: 14.09 / $width * 100vw;
+          }
+        }
+      }
+    }
+  }
+
+  /********************************/
+  ///WRAPER BOTTOM///
+  .dropdown {
+    max-width: 544 / $width * 100vw;
+    top: 120 / $width * 100vw;
+    padding: 5 / $width * 100vw;
+    border: 2 / $width * 100vw solid #4caf50;
+    right: 0;
+    &.fixed {
+      left: 0;
+      top: 0;
+    }
+
+    .header__wrapper-bottom {
+      .header__main-list {
+        width: 460 / $width * 100vw;
+        height: 20 / $width * 100vw;
+        &__submenu {
+          left: 0;
+          width: 200 / $width * 100vw;
+          margin-top: 0;
+          padding: 4 / $width * 100vw 20 / $width * 100vw;
+          transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
+          border-radius: 5 / $width * 100vw;
+
+          &__child {
+            width: 100%;
+            height: 35 / $width * 100vw;
+
+            a {
+              line-height: 30 / $width * 100vw;
+              font-size: 14 / $width * 100vw;
+            }
+          }
+        }
+        &__item {
+          margin-right: 36 / $width * 100vw;
+          &::before {
+            bottom: -5 / $width * 100vw;
+            width: 0%;
+            height: 2 / $width * 100vw;
+          }
+          &:hover {
+            &::before {
+              width: 100%;
+            }
+          }
+          &:nth-child(1) {
+            margin-right: 39 / $width * 100vw;
+          }
+          &:nth-child(2) {
+            margin-right: 45 / $width * 100vw;
+            a::after {
+              right: -2 / $width * 100vw;
+              height: 20 / $width * 100vw;
+              width: 20 / $width * 100vw;
+              background-size: 8 / $width * 100vw 6 / $width * 100vw;
+              transform: translateX(100%);
+            }
+          }
+          &:nth-child(8) {
+            margin-right: 0;
+          }
+        }
+      }
+      ul {
+        li {
+          height: 20 / $width * 100vw;
+          margin-right: 5 / $width * 100vw;
+
+          a img {
+            width: 18 / $width * 100vw;
+            height: 20 / $width * 100vw;
+          }
+          a {
+            font-size: 16 / $width * 100vw;
+            line-height: 20 / $width * 100vw;
+          }
+        }
+      }
+    }
+  }
+  .btn-mobile-nav {
+    img {
+      height: 48 / $width * 100vw;
+      width: 48 / $width * 100vw;
+    }
+  }
+
+  ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+  /**********SECTION HERO****************/
+
+  .section-hero {
+    max-width: 544 / $width * 100vw;
+  }
+
+  .hero {
+    flex-direction: column;
+    margin: 0 auto;
+    padding: 0 auto;
+    &__img-box {
+      margin-top: 20 / $width * 100vw;
+      margin-left: 30 / $width * 100vw;
+      &__img {
+        //height: 400 / $width * 100vw;
+        //width: 544 / $width * 100vw;
+        object-fit: cover;
+        width: 520 / $width * 100vw;
+        height: 400 / $width * 100vw;
+      }
+    }
+    &__text-box {
+      padding: 0 auto;
+      &__primary {
+        height: 70 / $width * 100vw;
+        width: 490 / $width * 100vw;
+        line-height: 39 / $width * 100vw;
+        font-size: 32 / $width * 100vw;
+        //margin-left: 35 / $width * 100vw;
+        margin-top: 20 / $width * 100vw;
+        margin-bottom: 5 / $width * 100vw;
+      }
+      &__tag-title {
+        height: 20 / $width * 100vw;
+        width: 490 / $width * 100vw;
+        font-size: 12 / $width * 100vw;
+        line-height: 16 / $width * 100vw;
+        // margin-left: 35 / $width * 100vw;
+        margin-top: 10 / $width * 100vwx;
+      }
+      &__description {
+        height: 98 / $width * 100vw;
+        width: 490 / $width * 100vw;
+        //margin-left: 35 / $width * 100vw;
+        margin-bottom: 20 / $width * 100vw;
+        margin-top: 5 / $width * 100vw;
+        font-size: 12 / $width * 100vw;
+        line-height: 18 / $width * 100vw;
+      }
+      &__btn {
+        //margin-left: 35 / $width * 100vw;
+        padding: 12 / $width * 100vw 40 / $width * 100vw;
+      }
+    }
+  }
+
+  ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+  /**********QUALITY****************/
+  .mark-quality {
+    max-width: 544 / $width * 100vw;
+    height: 100 / $width * 100vw;
+    padding: 0 auto;
+    &__container {
+      &__logos {
+        img {
+          height: 90 / $width * 100vw;
+          width: 190 / $width * 100vw;
+          margin-right: 10 / $width * 100vw;
+        }
+      }
+    }
+  }
+
+  ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+  /**********SERVICES ****************/
+  .section-services {
+    max-width: 544 / $width * 100vw;
+  }
+  .services {
+    &__text-box {
+      flex-direction: column;
+      &__first {
+        height: 33 / $width * 100vw;
+        width: 230 / $width * 100vw;
+        letter-spacing: -0.5 / $width * 100vw;
+        font-size: 34 / $width * 100vw;
+        line-height: 1.05;
+      }
+      &__second {
+        background-color: #341292;
+        height: 96 / $width * 100vw;
+        width: 480 / $width * 100vw;
+        font-size: 12 / $width * 100vw;
+        margin-top: 15 / $width * 100vw;
+        margin-bottom: 30 / $width * 100vw;
+        line-height: 20 / $width * 100vw;
+      }
+    }
+    &__gallery {
+      grid-template-columns: 245 / $width * 100vw 245 / $width * 100vw;
+      justify-content: space-between;
+      //gap: 20 / $width * 100vw;
+      padding-bottom: 52 / $width * 100vw;
+      &__transform {
+        height: 220 / $width * 100vw;
+        width: 245 / $width * 100vw;
+        &__item {
+          img {
+            height: 180 / $width * 100vw;
+            width: 245 / $width * 100vw;
+          }
+        }
+        &__content {
+          height: 40 / $width * 100vw;
+          padding-left: 20 / $width * 100vw;
+          padding-right: 23 / $width * 100vw;
+          &__tag {
+            height: 30 / $width * 100vw;
+            width: 189 / $width * 100vw;
+            font-size: 12 / $width * 100vw;
+            line-height: 20 / $width * 100vw;
+          }
+          img {
+            height: 18 / $width * 100vw;
+            width: 18 / $width * 100vw;
+          }
+        }
+      }
+    }
+  }
+  ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+  /**********VIDEO****************/
+  .section-video {
+    max-width: 544 / $width * 100vw;
+    height: 780 / $width * 100vw;
+    background-size: cover;
+    margin-top: 0 auto;
+    .video {
+      flex-direction: column;
+      &__text-box {
+        &__primary {
+          width: 490 / $width * 100vw;
+          height: 32 / $width * 100vw;
+          font-size: 32 / $width * 100vw;
+          line-height: 1.05;
+          margin-top: 40 / $width * 100vw;
+        }
+        &__paragraph {
+          height: 139 / $width * 100vw;
+          width: 490 / $width * 100vw;
+          margin-bottom: 10 / $width * 100vw;
+          &__description {
+            font-size: 14 / $width * 100vw;
+            line-height: 1.6;
+            margin-bottom: 10 / $width * 100vw;
+            span {
+              font-size: 14 / $width * 100vw;
+            }
+          }
+        }
+        &__btn {
+          margin-bottom: 20 / $width * 100vw;
+          padding: 10 / $width * 100vw 49 / $width * 100vw 10 / $width * 100vw
+            38 / $width * 100vw;
+        }
+      }
+      &__img-box__video-img {
+        height: 295 / $width * 100vw;
+        width: 490 / $width * 100vw;
+        border: 10 / $width * 100vw solid white;
+        margin-top: 10 / $width * 100vw;
+        margin-bottom: 40 / $width * 100vw;
+      }
+      &__img-box__button-img {
+        bottom: 230 / $width * 100vw;
+        right: 340 / $width * 100vw;
+        height: 28 / $width * 100vw;
+        width: 18 / $width * 100vw;
+      }
+    }
+  }
+  ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+  /**********FAVORITES ****************/
+  .favorites {
+    max-width: 544 / $width * 100vw;
+    &__h {
+      text-align: center;
+      margin-top: 30 / $width * 100vw;
+      margin-bottom: 20 / $width * 100vw;
+      h2 {
+        height: 32 / $width * 100vw;
+        width: 490 / $width * 100vw;
+        font-size: 32 / $width * 100vw;
+        line-height: 32 / $width * 100vw;
+      }
+    }
+
+    &__box {
+      // margin-left: 10 / $width * 100vw;
+      padding: 30 / $width * 100vw 10 / $width * 100vw 30 / $width * 100vw 45 /
+        $width * 100vw;
+      width: 490 / $width * 100vw;
+      height: 413 / $width * 100vw;
+    }
+  }
+  .tree {
+    justify-content: center;
+    text-align: center;
+    flex-shrink: 0;
+    &__primary {
+      height: 410 / $width * 100vw;
+      width: 285 / $width * 100vw;
+      border-radius: 10 / $width * 100vw;
+      h3 {
+        margin-top: 30 / $width * 100vw;
+        font-size: 18 / $width * 100vw;
+        line-height: 30 / $width * 100vw;
+        margin-bottom: 25 / $width * 100vw;
+      }
+    }
+
+    &__btn,
+    &__btn a {
+      padding: 0 auto;
+      margin-bottom: 25 / $width * 100vw;
+    }
+
+    &__img {
+      bottom: 0;
+      img {
+        height: 268 / $width * 100vw;
+        width: 285 / $width * 100vw;
+      }
+    }
+    &__hover {
+      flex-grow: 1;
+      margin-left: 30 / $width * 100vw;
+      margin-right: 30 / $width * 100vw;
+      p {
+        font-size: 12 / $width * 100vw;
+        line-height: 18 / $width * 100vw;
+      }
+    }
+    &__price {
+      margin-top: 7 / $width * 100vw;
+      flex-grow: 1;
+      p {
+        &:first-child {
+          line-height: 20 / $width * 100vw;
+        }
+        &:last-child {
+          font-size: 18 / $width * 100vw;
+          line-height: 24 / $width * 100vw;
+        }
+      }
+    }
+  }
+
+  .sliders__prev,
+  .sliders__next {
+    width: 10 / $width * 100vw;
+    height: 10 / $width * 100vw;
+    transform: translate(-42 / $width * 100vw, -6 / $width * 100vw);
+  }
+  .sliders__next {
+    transform: rotate(180deg)
+      translate(-310 / $width * 100vw, -6 / $width * 100vw);
+  }
+
+  ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+  /**********REVIEWS ****************/
+
+  .reviews {
+    height: 424 / $width * 100vw;
+
+    &__body {
+      margin: 0 auto;
+      padding: 60 / $width * 100vw 0;
+    }
+  }
+  .response {
+    &__hero {
+      margin: 0 auto;
+      &__head {
+        height: 100 / $width * 100vw;
+        width: 290 / $width * 100vw;
+        margin-bottom: 30 / $width * 100vw;
+        &__img {
+          margin: 0 auto;
+          border-radius: 50%;
+          flex-shrink: 0;
+          img {
+            width: 60 / $width * 100vw;
+            height: 60 / $width * 100vw;
+          }
+        }
+
+        &__name {
+          h3 {
+            margin-top: 10 / $width * 100vw;
+            margin-bottom: 7 / $width * 100vw;
+            font-size: 20 / $width * 100vw;
+            line-height: 26 / $width * 100vw;
+            letter-spacing: 0 / $width * 100vw;
+          }
+
+          &__stars {
+            margin-right: 10 / $width * 100vw;
+            img {
+              height: 15 / $width * 100vw;
+              width: 15 / $width * 100vw;
+              margin-right: 10 / $width * 100vw;
+            }
+          }
+        }
+      }
+
+      &__text {
+        max-width: 430 / $width * 100vw;
+        height: 184 / $width * 100vw;
+        margin-bottom: 10 / $width * 100vw;
+        font-size: 16 / $width * 100vw;
+        line-height: 28 / $width * 100vw;
+        letter-spacing: 0 / $width * 100vw;
+        text-shadow: 0 / $width * 100vw 0 / $width * 100vw 4 / $width * 100vw
+          rgba(0, 0, 0, 0.25);
+      }
+    }
+  }
+
+  .reviews__prev,
+  .reviews__next {
+    width: 10 / $width * 100vw;
+    height: 10 / $width * 100vw;
+    transform: translate(20 / $width * 100vw, 177 / $width * 100vw);
+  }
+  .reviews__next {
+    transform: rotate(180deg)
+      translate(-520 / $width * 100vw, 130 / $width * 100vw);
+  }
+
+  ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+  /**********FORMS ****************/
+  .forms {
+    max-width: 544 / $width * 100vw;
+    &__body {
+      padding: 50 / $width * 100vw 0 60 / $width * 100vw 0;
+      min-width: 410 / $width * 100vw;
+      h3 {
+        max-width: 410 / $width * 100vw;
+        height: 104 / $width * 100vw;
+        font-size: 26 / $width * 100vw;
+        margin-bottom: 30 / $width * 100vw;
+      }
+      span {
+        font-size: 26 / $width * 100vw;
+      }
+    }
+
+    &__row {
+      min-width: 390 / $width * 100vw;
+      height: 54 / $width * 100vw;
+
+      input {
+        width: 100%;
+        padding: 12 / $width * 100vw 0 12 / $width * 100vw 0;
+        border-radius: 28 / $width * 100vw;
+        font-size: 16 / $width * 100vw;
+        line-height: 22 / $width * 100vw;
+      }
+      button {
+        height: 14 / $width * 100vw;
+        width: 90 / $width * 100vw;
+      }
+    }
+    &__btn {
+      font-size: 12 / $width * 100vw;
+      padding: 16 / $width * 100vw 30 / $width * 100vw;
+      border-radius: 140 / $width * 100vw;
+      right: 0;
+      top: 0;
+    }
+  }
+
+  ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+  /**********FOOTER ****************/
+  .footer {
+    margin-top: 27 / $width * 100vw;
+
+    &__widgets {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .widget {
+      &__info {
+        margin-bottom: 13 / $width * 100vw;
+        line-height: 22 / $width * 100vw;
+
+        h3 {
+          margin-bottom: 10 / $width * 100vw;
+          font-size: 12 / $width * 100vw;
+          line-height: 19 / $width * 100vw;
+        }
+
+        li {
+          font-size: 12 / $width * 100vw;
+          line-height: 22 / $width * 100vw;
+        }
+
+        p {
+          font-size: 12 / $width * 100vw;
+          line-height: 26 / $width * 100vw;
+          margin-bottom: 10 / $width * 100vw;
+          &:last-child {
+            margin-bottom: 0;
+            line-height: 22 / $width * 100vw;
+          }
+        }
+        a {
+          font-size: 12 / $width * 100vw;
+          line-height: 35 / $width * 100vw;
+        }
+        &__telephone,
+        &__telephone a {
+          margin-bottom: 10 / $width * 100vw;
+          font-size: 18 / $width * 100vw;
+          line-height: 28 / $width * 100vw;
+          text-align: start;
+        }
+
+        &--right {
+          margin-bottom: 0;
+          text-align: left;
+        }
+      }
+      &__social-networks {
+        margin-top: 19 / $width * 100vw;
+        display: flex;
+        justify-content: left;
+
+        &__ithem {
+          flex-shrink: 0;
+          width: 40 / $width * 100vw;
+          height: 40 / $width * 100vw;
+          border-radius: 50%;
+          &:last-child {
+            margin-right: 0;
+          }
+          img {
+            margin: 11 / $width * 100vw;
+            width: 18 / $width * 100vw;
+            height: 18 / $width * 100vw;
+            filter: brightness(0) invert(10);
+          }
+        }
+      }
+    }
+
+    &__copyright {
+      height: 56 / $width * 100vw;
+      &__text,
+      &__text a {
+        margin-top: 15 / $width * 100vw;
+        height: 26 / $width * 100vw;
+        width: 212 / $width * 100vw;
+        font-size: 10 / $width * 100vw;
+        line-height: 26 / $width * 100vw;
+      }
+
+      &__terms,
+      &__terms a {
+        margin-top: 15 / $width * 100vw;
+        font-size: 8 / $width * 100vw;
+        line-height: 18 / $width * 100vw;
+      }
+    }
+  }
+}
